[gd_scene load_steps=4 format=3 uid="uid://b43gw8vdbuyip"]

[ext_resource type="FontFile" uid="uid://duaaaqt4n0o6m" path="res://Fonts/Blockletter.otf" id="1_1xnyr"]
[ext_resource type="Script" path="res://UI/Menus/Scripts/main_menu.gd" id="1_8vu5g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqim4"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vu5g")

[node name="Sart_Game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -104.0
offset_right = 61.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "StartGame
"

[node name="Quit_Game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 76.0
offset_right = 61.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Quit Game"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_top = 70.0
offset_right = 196.0
offset_bottom = 148.0
grow_horizontal = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_1xnyr")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_oqim4")
text = "Box bandicoot project! "

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.32549, 0.345098, 1, 1)

[connection signal="pressed" from="Sart_Game" to="." method="_on_sart_game_pressed"]
[connection signal="pressed" from="Quit_Game" to="." method="_on_quit_game_pressed"]
